Improved domain classes